--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,14 @@
   height: 20px;
   width: 100%;
 }
+.modal-header{
+  justify-content: space-between;
+}
+.modal-header .close{
+  padding: 0rem 0.4rem !important;
+  border: none;
+  outline: none;
+  background: var(--color-blue-light);
+  color: white;
+  font-size: 1.5rem;
+}
